added my roomment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta charaset="utf-8">
 </head>
 <body>
-<input type="file"><br>
-<textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
+divine
 </body>
 </html>
